# tusks-test

./: AGENTS.md  Cargo.toml  README.md  out.rs
src/: compose.rs  external1.rs  external2.rs  external_root.rs  holla.rs  main.rs  out.bad.rs  out.good.rs  out.rs  submod1.rs  submod2.rs
tests/: arg.rs  basic.rs  command_attribute.rs  common.rs  default-functions.rs  external-modules.rs  integration_tests.rs  nested-modules.rs  parameters.rs  return-values.rs  t_defaults_tests.rs  t_optional_tests.rs  t_positional_tests.rs  t_string_tests.rs  t_submodule_tests.rs  t_vec_tests.rs  tasks-mode.rs
tests/common/: mod.rs
