[package]
name = "tusks-test"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
default-run = "tusks-test"

[dependencies]
clap = { workspace = true, features = ["string", "derive"] }
tusks.workspace = true
tusks-tasks.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true

[features]
debug = ["tusks/debug"]
